content/contracts/3.x/utilities.mdx
---
title: Utilities
---

The OpenZeppelin Contracts provide a ton of useful utilities that you can use in your project. Here are some of the more popular ones.

## Cryptography

### Checking Signatures On-Chain

[`ECDSA`](/contracts/3.x/api/cryptography#ECDSA) provides functions for recovering and managing Ethereum account ECDSA signatures. These are often generated via [`web3.eth.sign`](https://web3js.readthedocs.io/en/v1.2.4/web3-eth.html#sign), and are a 65 byte array (of type `bytes` in Solidity) arranged the following way: `[[v (1)], [r (32)], [s (32)]]`.

The data signer can be recovered with [`ECDSA.recover`](/contracts/3.x/api/cryptography#ECDSA-recover-bytes32-bytes-), and its address compared to verify the signature. Most wallets will hash the data to sign and add the prefix '\x19Ethereum Signed Message:\n', so when attempting to recover the signer of an Ethereum signed message hash, you’ll want to use [`toEthSignedMessageHash`](/contracts/3.x/api/cryptography#ECDSA-toEthSignedMessageHash-bytes32-).

```solidity
using ECDSA for bytes32;

function _verify(bytes32 data, address account) pure returns (bool)
    return keccack256(data)
        .toEthSignedMessageHash()
        .recover(signature) == account;

```

<Callout type='warn'>
Getting signature verification right is not trivial: make sure you fully read and understand [`ECDSA`](/contracts/3.x/api/cryptography#ECDSA)'s documentation.
</Callout>

### Verifying Merkle Proofs

[`MerkleProof`](/contracts/3.x/api/cryptography#MerkleProof) provides [`verify`](/contracts/3.x/api/cryptography#MerkleProof-verify-bytes32---bytes32-bytes32-), which can prove that some value is part of a [Merkle tree](https://en.wikipedia.org/wiki/Merkle_tree).

## Introspection

In Solidity, it’s frequently helpful to know whether or not a contract supports an interface you’d like to use. ERC165 is a standard that helps do runtime interface detection. Contracts provides helpers both for implementing ERC165 in your contracts and querying other contracts:

* [`IERC165`](/contracts/3.x/api/introspection#IERC165) — this is the ERC165 interface that defines [`supportsInterface`](/contracts/3.x/api/introspection#IERC165-supportsInterface-bytes4-). When implementing ERC165, you’ll conform to this interface.
* [`ERC165`](/contracts/3.x/api/introspection#ERC165) — inherit this contract if you’d like to support interface detection using a lookup table in contract storage. You can register interfaces using [`_registerInterface(bytes4)`](/contracts/3.x/api/introspection#ERC165-_registerInterface-bytes4-): check out example usage as part of the ERC721 implementation.
* [`ERC165Checker`](/contracts/3.x/api/introspection#ERC165Checker) — ERC165Checker simplifies the process of checking whether or not a contract supports an interface you care about.
* include with `using ERC165Checker for address;`
* [`myAddress._supportsInterface(bytes4)`](/contracts/3.x/api/introspection#ERC165Checker-_supportsInterface-address-bytes4-)
* [`myAddress._supportsAllInterfaces(bytes4[](/contracts/3.x/api/introspection#ERC165Checker-_supportsAllInterfaces-address-bytes4---))`]

```solidity
contract MyContract
    using ERC165Checker for address;

    bytes4 private InterfaceId_ERC721 = 0x80ac58cd;

    /**
     * @dev transfer an ERC721 token from this contract to someone else
     */
    function transferERC721(
        address token,
        address to,
        uint256 tokenId
    )
        public
    {
        require(token.supportsInterface(InterfaceId_ERC721), "IS_NOT_721_TOKEN");
        IERC721(token).transferFrom(address(this), to, tokenId);

}
```

## Math

The most popular math related library OpenZeppelin Contracts provides is [`SafeMath`](/contracts/3.x/api/math#SafeMath), which provides mathematical functions that protect your contract from overflows and underflows.

Include the contract with `using SafeMath for uint256;` and then call the functions:

* `myNumber.add(otherNumber)`
* `myNumber.sub(otherNumber)`
* `myNumber.div(otherNumber)`
* `myNumber.mul(otherNumber)`
* `myNumber.mod(otherNumber)`

Easy!

## Payment

Want to split some payments between multiple people? Maybe you have an app that sends 30% of art purchases to the original creator and 70% of the profits to the current owner; you can build that with [`PaymentSplitter`](/contracts/3.x/api/payment#PaymentSplitter)!

In Solidity, there are some security concerns with blindly sending money to accounts, since it allows them to execute arbitrary code. You can read up on these security concerns in the [Ethereum Smart Contract Best Practices](https://consensys.github.io/smart-contract-best-practices/) website. One of the ways to fix reentrancy and stalling problems is, instead of immediately sending Ether to accounts that need it, you can use [`PullPayment`](/contracts/3.x/api/payment#PullPayment), which offers an [`_asyncTransfer`](/contracts/3.x/api/payment#PullPayment-_asyncTransfer-address-uint256-) function for sending money to something and requesting that they [`withdrawPayments()`](/contracts/3.x/api/payment#PullPayment-withdrawPayments-address-payable-) it later.

If you want to Escrow some funds, check out [`Escrow`](/contracts/3.x/api/payment#Escrow) and [`ConditionalEscrow`](/contracts/3.x/api/payment#ConditionalEscrow) for governing the release of some escrowed Ether.

## Collections

If you need support for more powerful collections than Solidity’s native arrays and mappings, take a look at [`EnumerableSet`](/contracts/3.x/api/utils#EnumerableSet) and [`EnumerableMap`](/contracts/3.x/api/utils#EnumerableMap). They are similar to mappings in that they store and remove elements in constant time and don’t allow for repeated entries, but they also support _enumeration_, which means you can easily query all stored entries both on and off-chain.

## Misc

Want to check if an address is a contract? Use [`Address`](/contracts/3.x/api/utils#Address) and [`Address.isContract()`](/contracts/3.x/api/utils#Address-isContract-address-).

Want to keep track of some numbers that increment by 1 every time you want another one? Check out [`Counters`](/contracts/3.x/api/utils#Counters). This is useful for lots of things, like creating incremental identifiers, as shown on the [ERC721 guide](/contracts/3.x/erc721).
